syntax = "proto3";

package notes;

option go_package = "golang-simple-notes/proto";

// The Notes service definition
service Notes {
  // Create a new note
  rpc CreateNote (CreateNoteRequest) returns (Note);
  
  // Get a note by ID
  rpc GetNote (GetNoteRequest) returns (Note);
  
  // Get all notes
  rpc GetAllNotes (GetAllNotesRequest) returns (GetAllNotesResponse);
  
  // Update an existing note
  rpc UpdateNote (UpdateNoteRequest) returns (Note);
  
  // Delete a note
  rpc DeleteNote (DeleteNoteRequest) returns (DeleteNoteResponse);
}

// Note message represents a note in the system
message Note {
  string id = 1;
  string title = 2;
  string content = 3;
  string created_at = 4;
  string updated_at = 5;
}

// Request message for creating a note
message CreateNoteRequest {
  string title = 1;
  string content = 2;
}

// Request message for getting a note by ID
message GetNoteRequest {
  string id = 1;
}

// Request message for getting all notes
message GetAllNotesRequest {
  // Empty request
}

// Response message for getting all notes
message GetAllNotesResponse {
  repeated Note notes = 1;
}

// Request message for updating a note
message UpdateNoteRequest {
  string id = 1;
  string title = 2;
  string content = 3;
}

// Request message for deleting a note
message DeleteNoteRequest {
  string id = 1;
}

// Response message for deleting a note
message DeleteNoteResponse {
  bool success = 1;
}